# inspect

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  SECURITY.md  inspect-help  install.sh
.github/ISSUE_TEMPLATE/: bug_report.md
help/: inspect-help
src/: args.c  buffer.c  error.c  error.h  file.c  input.c  inspect.h  main.c  render.c
